Solved task2 of lab1, now to reformat task1 slightly and write documentation